Remove .out files

--- a/raft.cfg
+++ b/raft.cfg
@@ -2,7 +2,7 @@
 SPECIFICATION Spec
 
 CONSTANTS
-    N         = 2
+    N         = 3
     M         = 2
     TermLimit = 3
 
@@ -11,4 +11,4 @@ INVARIANTS
     
 PROPERTIES
     
-\* CHECK_DEADLOCK FALSE
+CHECK_DEADLOCK FALSE
