Start sending messages to followers, check leader logs during election

--- a/raft.cfg
+++ b/raft.cfg
@@ -2,13 +2,18 @@
 SPECIFICATION Spec
 
 CONSTANTS
-    N         = 3
-    M         = 2
-    TermLimit = 2
+    N = 3
+    M = 2
+    T = 2
+    E = 2
 
 INVARIANTS
-    TypeOK
-    
+    ElectionSafety
+    LogMatching
+    LeaderCompleteness
+    StateMachineSafety
+
 PROPERTIES
+    LeaderAppendOnly
     
 CHECK_DEADLOCK FALSE
