Add a bait invariant

--- a/raft.cfg
+++ b/raft.cfg
@@ -12,6 +12,7 @@ INVARIANTS
     LogMatching
     LeaderCompleteness
     StateMachineSafety
+    \* BaitInvariant
 
 PROPERTIES
     LeaderAppendOnly
